src/test/ui/error-codes/E0260.stderr
error[E0260]: the name `alloc` is defined multiple times
  --> $DIR/E0260.rs:16:1
   |
14 | extern crate alloc;
   | ------------------- previous import of the extern crate `alloc` here
15 | 
16 | mod alloc {
   | ^^^^^^^^^ `alloc` redefined here
   |
   = note: `alloc` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
14 | extern crate alloc as other_alloc;
   |

error: aborting due to previous error

